home page change icons

--- a/tiremanagesystem/.env
+++ b/tiremanagesystem/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Tire Management System"
 APP_ENV=local
 APP_KEY=base64:k5rYMEmCyKmb5ji6zH8T6Q1LSCGArdsSg0ZOa7mL0uM=
 APP_DEBUG=true
